<resources>
    <string name="app_name">TestApp</string>
    <string name="enter_text">Войти</string>
    <string name="auth_text">Авторизация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="reg">Регистрация</string>
    <string name="Lname">Фамилия</string>
    <string name="nameHint">не более 30 символов</string>
    <string name="name">Имя</string>
    <string name="patrName">Отчество</string>
    <string name="logHint">минимум 3 символа без специальных</string>
    <string name="passHint">минимум 8 символов, латинские буквы, цифра, заглавная буква</string>
    <string name="repeatPass">Повторите пароль</string>
    <string name="repPassHint">должен совпадать с паролем выше</string>
    <string name="phone">Телефон</string>
    <string name="phoneHint">(999) 999 99 99</string>
    <string name="email">Email</string>
    <string name="emailHint">example@mail.com</string>
    <string name="bDate">Дата рождения</string>
    <string name="bDateHint">дд.мм.гггг</string>
    <string name="regBtn">Зарегистрироваться</string>
    <string name="avatar">Аватарка</string>
    <string name="emailVal"><u>login@mail.ru</u></string>
    <string name="nameProjLine"><u>Имя:</u></string>
    <string name="regDateLine"><u>Дата регистрации: </u></string>
    <string name="ageLine"><u>Возраст: </u></string>
    <string name="profile">Профиль</string>
    <string name="edit">Редактировать</string>
    <integer name="passwordType">129</integer>
    <integer name="emailType">33</integer>
    <integer name="dateType">20</integer>
    <string name="settings">Настройки</string>
    <string name="theme">Тема</string>
    <string name="light">Светлая</string>
    <string name="dark">Темная</string>
    <string name="system">Системная</string>
    <string name="startPage">Стартовая страница</string>
    <string name="language">Язык</string>
    <string name="save">Сохранить</string>
    <string-array name="startPageArray">
        <item>Все проекты</item>
        <item>Профиль</item>
        <item>Проект</item>
        <item>Настройки</item>
    </string-array>
    <string-array name="languageArray">
        <item>Русский</item>
        <item>Английский</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
