<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/layout">
    <TextView
        android:id="@+id/headProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        style="@style/mainHeader"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:contentDescription="@string/avatar"
        android:src="@drawable/test"
        android:background="@drawable/frame"
        android:scaleType="fitCenter"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/headProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/imgAvatar"
        app:layout_constraintStart_toStartOf="parent"
        >
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TableRow android:padding="5dp">
                <TextView android:text="@string/Lname" style="@style/label" android:paddingEnd="10sp"/>
                <TextView android:text="Иванова" style="@style/labelAcherus"/>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/edit"
                    android:src="@drawable/edit"
                    android:paddingStart="10dp"
                    />
            </TableRow>
            <TableRow android:padding="5dp">
                <TextView android:text="@string/name" style="@style/label" android:paddingEnd="10sp"/>
            </TableRow>
            <TableRow android:padding="5dp">
                <TextView android:text="@string/patrName" style="@style/label" android:paddingEnd="10sp"/>
            </TableRow>
            <TableRow android:padding="5dp">
                <TextView android:text="@string/login" style="@style/label" android:paddingEnd="10sp"/>
            </TableRow>
            <TableRow android:padding="5dp">
                <TextView android:text="@string/password" style="@style/label" android:paddingEnd="10sp"/>
            </TableRow>
            <TableRow android:padding="5dp">
                <TextView android:text="@string/repeatPass" style="@style/label" android:paddingEnd="10sp"
                    app:layout_constraintHorizontal_weight="1" android:layout_width="0dp"
                    />
            </TableRow>
            <TableRow android:padding="5dp">
                <TextView android:text="@string/phone" style="@style/label" android:paddingEnd="10sp"/>
            </TableRow>
            <TableRow android:padding="5dp">
                <TextView android:text="@string/email" style="@style/label" android:paddingEnd="10sp"/>
            </TableRow>
            <TableRow android:padding="5dp">
                <TextView android:text="@string/bDate" style="@style/label" android:paddingEnd="10sp"/>
            </TableRow>
        </TableLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
