<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/layout"
    >
<TextView
    android:id="@+id/headReg"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/reg"
    style="@style/mainHeader"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    />
    <TextView
        android:id="@+id/txtLname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/etxtLname"
        app:layout_constraintBottom_toBottomOf="@id/etxtLname"
        app:layout_constraintEnd_toStartOf="@id/etxtLname"
        android:text="@string/Lname"
        style="@style/label"
        android:paddingRight="10dp"
        app:layout_constraintHorizontal_weight="1"
        />
    <EditText
        android:id="@+id/etxtLname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nameHint"
        app:layout_constraintStart_toEndOf="@id/txtLname"
        app:layout_constraintTop_toBottomOf="@id/headReg"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintHorizontal_weight="2.5"
        />
    <TextView
        android:id="@+id/txtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/etxtName"
        app:layout_constraintBottom_toBottomOf="@id/etxtName"
        app:layout_constraintEnd_toStartOf="@id/etxtName"
        android:text="@string/name"
        style="@style/label"
        android:paddingRight="10dp"
        app:layout_constraintHorizontal_weight="1"
        />
    <EditText
        android:id="@+id/etxtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nameHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etxtLname"
        app:layout_constraintStart_toEndOf="@id/txtName"
        android:paddingTop="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintHorizontal_weight="2.5"
        />
    <TextView
        android:id="@+id/txtPatr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/etxtPatr"
        app:layout_constraintBottom_toBottomOf="@id/etxtPatr"
        app:layout_constraintEnd_toStartOf="@id/etxtPatr"
        android:text="@string/patrName"
        style="@style/label"
        android:paddingRight="10dp"
        app:layout_constraintHorizontal_weight="1"
        />
    <EditText
        android:id="@+id/etxtPatr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nameHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etxtName"
        app:layout_constraintStart_toEndOf="@id/txtPatr"
        android:paddingTop="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintHorizontal_weight="2.5"
        />
    <TextView
        android:id="@+id/txtLog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/etxtLog"
        app:layout_constraintBottom_toBottomOf="@id/etxtLog"
        app:layout_constraintEnd_toStartOf="@id/etxtLog"
        android:text="@string/login"
        style="@style/label"
        android:paddingRight="10dp"
        app:layout_constraintHorizontal_weight="1"
        />
    <EditText
        android:id="@+id/etxtLog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/logHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etxtPatr"
        app:layout_constraintStart_toEndOf="@id/txtLog"
        android:paddingTop="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintHorizontal_weight="2.5"
        android:ellipsize="end"
        android:maxLines="1"
        />
    <TextView
        android:id="@+id/txtPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/etxtPass"
        app:layout_constraintBottom_toBottomOf="@id/etxtPass"
        app:layout_constraintEnd_toStartOf="@id/etxtPass"
        android:text="@string/password"
        style="@style/label"
        android:paddingRight="10dp"
        app:layout_constraintHorizontal_weight="1"
        />
    <EditText
        android:id="@+id/etxtPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/passHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etxtLog"
        app:layout_constraintStart_toEndOf="@id/txtPass"
        android:paddingTop="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintHorizontal_weight="2.5"
        android:maxLines="1"
        android:ellipsize="end"
        android:inputType="textPassword"
        />
    <TextView
        android:id="@+id/txtPassRep"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/etxtPassRep"
        app:layout_constraintBottom_toBottomOf="@id/etxtPassRep"
        app:layout_constraintEnd_toStartOf="@id/etxtPassRep"
        android:text="@string/repeatPass"
        style="@style/label"
        android:paddingRight="10dp"
        app:layout_constraintHorizontal_weight="1"
        />
    <EditText
        android:id="@+id/etxtPassRep"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/repPassHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etxtPass"
        app:layout_constraintStart_toEndOf="@id/txtPassRep"
        android:paddingTop="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintHorizontal_weight="2.5"
        android:maxLines="1"
        android:ellipsize="end"
        android:inputType="textPassword"
        />
    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/etxtPhone"
        app:layout_constraintBottom_toBottomOf="@id/etxtPhone"
        app:layout_constraintEnd_toStartOf="@id/etxtPhone"
        android:text="@string/phone"
        style="@style/label"
        android:paddingRight="10dp"
        app:layout_constraintHorizontal_weight="1"
        />
    <EditText
        android:id="@+id/etxtPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/phoneHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etxtPassRep"
        app:layout_constraintStart_toEndOf="@id/txtPhone"
        android:paddingTop="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintHorizontal_weight="2.5"
        android:maxLines="1"
        android:inputType="phone"
        />
    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/etxtEmail"
        app:layout_constraintBottom_toBottomOf="@id/etxtEmail"
        app:layout_constraintEnd_toStartOf="@id/etxtEmail"
        android:text="@string/email"
        style="@style/label"
        android:paddingRight="10dp"
        app:layout_constraintHorizontal_weight="1"
        />
    <EditText
        android:id="@+id/etxtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/emailHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etxtPhone"
        app:layout_constraintStart_toEndOf="@id/txtEmail"
        android:paddingTop="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintHorizontal_weight="2.5"
        android:maxLines="1"
        />
    <TextView
        android:id="@+id/txtBdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/etxtBDate"
        app:layout_constraintBottom_toBottomOf="@id/etxtBDate"
        app:layout_constraintEnd_toStartOf="@id/etxtBDate"
        android:text="@string/bDate"
        style="@style/label"
        android:paddingRight="10dp"
        app:layout_constraintHorizontal_weight="1"
        />
    <EditText
        android:id="@+id/etxtBDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/bDateHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etxtEmail"
        app:layout_constraintStart_toEndOf="@id/txtBdate"
        android:paddingTop="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintHorizontal_weight="2.5"
        android:maxLines="1"
        android:inputType="date"
        />
    <Button
        android:id="@+id/regBtnRegAct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/regBtn"
        style="@style/btnColor"
        />
</androidx.constraintlayout.widget.ConstraintLayout>