<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B7CB99"
    android:padding="25dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_text"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:fontFamily="@font/anticva"
        android:textColor="@color/white"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            android:textColor="@color/dark_plum"
            />
        <EditText
            android:id="@+id/loginTxtBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:layout_marginTop="5dp"
            />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:textColor="@color/dark_plum"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/enterBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/enter_text"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/light_blueberry"
        />
    <Button
        android:id="@+id/regBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/reg"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/light_blueberry"
        style="@style/btnColor"
        />
</LinearLayout>