<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment"
    style="@style/layout"
    android:orientation="vertical">
    <TextView
        android:id="@+id/headSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        style="@style/mainHeader"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/headSettings"
        app:layout_constraintStart_toStartOf="parent"
        >
        <TableRow
            android:paddingBottom="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/theme"
                style="@style/label"
                android:paddingEnd="10dp"
                android:layout_weight="2"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end">

                <RadioGroup
                    android:id="@+id/themes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/light"
                        style="@style/labelAcherus.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="0dp"
                        android:minHeight="0dp"
                        android:text="@string/light" />

                    <RadioButton
                        android:id="@+id/dark"
                        style="@style/labelAcherus.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="0dp"
                        android:minHeight="0dp"
                        android:text="@string/dark" />

                    <RadioButton
                        android:id="@+id/system"
                        style="@style/labelAcherus.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="0dp"
                        android:minHeight="0dp"
                        android:text="@string/system" />
                </RadioGroup>
            </LinearLayout>
        </TableRow>
        <TableRow
            android:paddingBottom="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/startPage"
                style="@style/label"
                android:paddingEnd="10dp"
                android:layout_weight="2"
                />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_weight="1"
                >
                <Spinner
                    android:id="@+id/startPage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:entries="@array/startPageArray"
                    android:gravity="end"/>
                <Spinner
                    android:id="@+id/projSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:visibility="invisible"
                    android:gravity="end"
                    />
            </LinearLayout>
        </TableRow>
        <TableRow
            android:paddingBottom="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/language"
                style="@style/label"
                android:paddingEnd="10dp"
                android:layout_weight="2"
                />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_weight="1"
                >
                <Spinner
                    android:id="@+id/languageSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:entries="@array/languageArray"
                    android:gravity="end"/>
            </LinearLayout>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
